--- a/frontend/src/scss/_common.scss
+++ b/frontend/src/scss/_common.scss
@@ -47,6 +47,9 @@ $media-size-mobile: 600px;
   border-radius: var(--icon-button-border-radius);
   aspect-ratio: 1 / 1;
   cursor: pointer;
+  box-sizing: border-box;
+  max-height: 100%;
+  width: min-content;
 
   svg {
     color: var(--text-color);
