--- a/frontend/src/component/preferences/preferences.scss
+++ b/frontend/src/component/preferences/preferences.scss
@@ -69,6 +69,16 @@
       user-select: none;
       white-space: nowrap;
 
+      * {
+        pointer-events: none;
+      }
+
+      @media (max-width: common.$media-size-mobile) {
+        label {
+          display: none;
+        }
+      }
+
       &:hover {
         border: 1px solid var(--icon-button-hover-border-color);
       }
