--- a/frontend/src/component/user-view/user-view.scss
+++ b/frontend/src/component/user-view/user-view.scss
@@ -8,7 +8,7 @@
 .user {
   & {
     min-height: 400px;
-
+    background-color: inherit;
     @include preferences.prefsRoot();
     @include preferences.prefsToolbar();
   }
