--- a/frontend/src/scss/_preferences.scss
+++ b/frontend/src/scss/_preferences.scss
@@ -27,6 +27,7 @@
     justify-content: flex-end;
     align-items: center;
     gap: 12px;
+    background-color: inherit;
 
     label {
       flex: 1 1 auto;
