--- a/frontend/src/component/playlist-filter/playlist-filter.scss
+++ b/frontend/src/component/playlist-filter/playlist-filter.scss
@@ -9,9 +9,7 @@
   font-size: 0.5rem;
   flex: 1 1 auto;
   max-width: 400px;
-  @media (max-width: common.$media-size-mobile) {
-    width: 100px;
-  }
+  background-color: inherit;
 
 
   &__option-active {
