--- a/frontend/src/scss/_theme.scss
+++ b/frontend/src/scss/_theme.scss
@@ -34,6 +34,7 @@
 
   --attention-color: red;
   --warn-color: orange;
+  --ok-color: #21e821;
 
   --card-background-color: #202733; //#282828;
   --card-color: #ffffff;
