--- a/frontend/src/component/date-picker/date-picker.scss
+++ b/frontend/src/component/date-picker/date-picker.scss
@@ -1,9 +1,52 @@
+@use '../../scss/common';
 @import "react-datepicker/dist/react-datepicker.css";
+
+.date-picker-container {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  gap: 4px;
+
+  &__toolbar {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    gap: 4px;
+    button {
+      @include common.iconButton();
+    }
+    svg {
+       fill: var(--icon-button-color);
+    }
+  }
+}
+
+.react-datepicker-wrapper {
+  box-sizing: border-box;
+  overflow: hidden;
+}
 
 .react-datepicker__header {
   h2 {
     display: none;
   }
+}
+
+.react-datepicker__navigation--years-upcoming {
+  width: 0;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 12px solid var(--border-color);
+  transform: translateY(4px);
+}
+.react-datepicker__navigation--years-previous {
+  width: 0;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 12px solid var(--border-color);
+  transform: translateY(-4px);
 }
 
 .react-datepicker__input-container {
@@ -15,6 +58,7 @@
   border-radius: var(--border-radius);
   user-select: none;
   cursor: pointer;
+  box-sizing: border-box;
 
   input {
     user-select: none;
