--- a/frontend/src/component/main-config-view/main-config-view.scss
+++ b/frontend/src/component/main-config-view/main-config-view.scss
@@ -25,7 +25,7 @@
 
     &-form {
       &__section-title {
-        color: var(--label-color);
+        color: var(--title-label-color);
         font-weight: bold;
         border-bottom: 1px solid var(--border-color);
         padding-bottom: 4px;
