--- a/frontend/src/scss/_theme.scss
+++ b/frontend/src/scss/_theme.scss
@@ -63,8 +63,8 @@
   --scrollbar-track-color: #838383;
   --scrollbar-handle-color: #505050;
 
-  --tabset-background-color: transparent; // #282A36;
-  --tabset-border-color: #000;
+  --tabset-background-color: #44475a47; // #282A36;
+  --tabset-border-color: #535353;
   --tab-background-color: #44475A;
   --tab-color: #fff;
   --tab-hover-background-color: #6272A4;
