--- a/frontend/src/component/source-selector/source-selector.scss
+++ b/frontend/src/component/source-selector/source-selector.scss
@@ -1,6 +1,10 @@
 .source-selector {
   display: flex;
   flex-flow: row nowrap;
-  padding: 10px;
+  padding: 10px 0 10px 0;
+  background-color: inherit;
+  .input-field {
+    flex: 1 1 auto;
+  }
 }
 
