--- a/frontend/src/scss/_theme.scss
+++ b/frontend/src/scss/_theme.scss
@@ -84,4 +84,10 @@
   --option-active-color: #000;
 
   --shocase-card-background: #4b4b4b;
+
+  --breadcrumbs-background-color:  #202733;
+  --breadcrumb-background-color: #4e545d;
+  --breadcrumb-color: #c4c4c4;
+  --breadcrumb-active-background-color: #4ad96e;
+  --breadcrumb-active-color: #000;
 }
