user boquet for m3u playlist

--- a/frontend/src/component/playlist-filter/playlist-filter.scss
+++ b/frontend/src/component/playlist-filter/playlist-filter.scss
@@ -16,13 +16,7 @@
   }
 
   &__option-active {
-    box-sizing: border-box !important;
-    transform: scale(0.9);
-    background-color: var(--option-active-background-color) !important;
-    color: var(--option-active-color) !important;
-    svg {
-      color: var(--option-active-color) !important;
-    }
+    @include common.activeOptionButton();
   }
 
   &__error-message {
