- web ui path prefix fixed - login screen changed - grace_period reduced to 500 millis

--- a/frontend/src/component/login/login.scss
+++ b/frontend/src/component/login/login.scss
@@ -10,6 +10,8 @@
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
   overflow: hidden;
+  position: relative;
+  z-index: 1;
 
   &__logo {
     position: absolute;
@@ -17,7 +19,6 @@
     right: 0;
     top: 0;
     bottom: 0;
-    z-index: -1;
     svg {
       height: 100%;
       width: 100%;
@@ -26,7 +27,8 @@
   }
 
   &__title {
-    background-color: var(--app-header-color);
+    background-color: var(--card-background-color);
+    color: var(--card-color);
     padding: 8px;
     font-size: 1.5rem;
   }
@@ -45,6 +47,9 @@
       font-size: 1.4rem;
       background-color: var(--card-background-color);
       padding: 4px 8px;
+    }
+    input[type="password"] {
+      caret-color:  var(--card-color);
     }
 
     button {
