added grace_period_millis to web_ui

--- a/frontend/src/component/main-config-view/main-config-view.scss
+++ b/frontend/src/component/main-config-view/main-config-view.scss
@@ -1,10 +1,14 @@
 @use '../../scss/common';
 @use '../../scss/preferences';
 
-.main-config__form, .reverse-proxy__form {
+@media (min-width: common.$media-size-mobile) {
+  .main-config__form, .reverse-proxy__form {
     .form-view__col-label {
-      width: 12em;
+      min-width: 200px !important;
+      max-width: 200px !important;
+      width: 200px !important;
     }
+  }
 }
 
 .main-config {
