initial video player

--- a/frontend/src/component/playlist-viewer/playlist-viewer.scss
+++ b/frontend/src/component/playlist-viewer/playlist-viewer.scss
@@ -4,6 +4,7 @@
   flex: 1 1 auto;
   overflow: hidden;
   padding: 10px;
+  height: 100%;
   color: var(--playlist-color);
   box-sizing: border-box;
 
