video player refactoring

--- a/frontend/src/scss/_theme.scss
+++ b/frontend/src/scss/_theme.scss
@@ -1,6 +1,7 @@
 :root {
   --media-size-mobile: 600px;
   --text-color: #ffffff;
+  --hint-color: #888888;
   --label-color: #73d6fe;
   --background-color: #303946; //#121212;
   --app-header-color: #73d6fe; //#6495b1;
