WebUI target options force redirect warning for user editor.

--- a/frontend/src/component/user-view/user-view.scss
+++ b/frontend/src/component/user-view/user-view.scss
@@ -92,6 +92,16 @@
 
       label {
         flex: 1 1 0;
+        display: flex;
+        flex-flow: row;
+        align-items: center;
+        align-content: center;
+        gap: 8px;
+      }
+
+      &-options {
+        font-size: 0.9rem;
+        color: var(--warn-color);
       }
 
       &-toolbar {
