--- a/frontend/src/component/preferences/preferences.scss
+++ b/frontend/src/component/preferences/preferences.scss
@@ -4,11 +4,13 @@
   @include common.container_horz_no_padding();
   overflow: hidden;
   flex: 1 1 auto;
+  max-width: var(--max-view-width) !important;
 
   &__content {
     @include common.container_horz_nowrap(flex-start, 0);
     flex: 1 1 auto;
     overflow: hidden;
+    gap: 0;
   }
 
   &__panels {
