--- a/frontend/src/scss/_theme.scss
+++ b/frontend/src/scss/_theme.scss
@@ -38,6 +38,7 @@
   --ok-color: #21e821;
 
   --card-background-color: #202733; //#282828;
+  --card-background-color-darker: #1c2026;
   --card-color: #ffffff;
   --card-border-color: #47495d;
 
